--- a/index.html
+++ b/index.html
@@ -1,37 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Age calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main>
+   
+      <section class="form-container">
+        <form id="form">
 
-  Day
-  DD
+          <div class="input">
+            <label for="birthDay">Day</label>
+            <input type="text" id="birthDay" placeholder="DD" maxlength="2">
+            <span class="dayError hidden"></span>
+          </div>
 
-  Month
-  MM
+          <div class="input">
+            <label for="birthonth">Month</label>
+            <input type="text" id="birthMonth" placeholder="MM" maxlength="2">
+            <span class="monthError hidden"></span>
+          </div>
 
-  Year
-  YYYY
+          <div class="input">
+            <label for="birthYear">Year</label>
+            <input type="text" id="birthYear" placeholder="YYYY" maxlength="4">
+            <span class="yearError hidden"></span>
 
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+          </div>
+
+          <div class="input_btn">
+            <button type="submit" class="form_btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44">
+                <g fill="none" stroke="#FFF" stroke-width="2">
+                  <path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44" />
+                </g>
+              </svg></button>
+          </div>
+
+        </form>
+      </section>
+
+      <section class="age-container">
+        <div id="currentYears">--years</div>
+        <div id="currentMonths">--months</div>
+        <div id="currentDays">--days</div>
+      </section>
+
+
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
