--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 <body>
   <main>
-   
+    <h1>
+     <span style="color: var(--primary-purple);">Age</span> Calculator
+    </h1>
       <section class="form-container">
         <form id="form">
 
