--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Age calculator app</title>
+  <title>Age calculator app</title>
 
 </head>
 
